# distil_act

./: .gitignore  CLAUDE.md  PLAN.md  README.md  config.yaml  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
Docker/: Dockerfile
config/: collection.yaml  distill.yaml  eval.yaml  quant.yaml  simulation.yaml  train.yaml
docs/: stack.md  work_plan.md
models/: reach_scene.xml
scripts/: collect_data.py  distillation_measure.py  eval_act.py  eval_distil.py  ptq.py  push_data_to_hub.py  push_model_to_hub.py  push_student_to_hub.py  push_teacher_to_hub.py  push_to_hub.py  qat.py  train_act.py  train_distil.py
src/algorithms/: act_policy.py  chunking_buffer.py  embedding.py
src/dataset/: dataloader.py  dataset_manager.py  episode_recorder.py  reach_dataset.py
src/env/: base.py  env.py
src/expert/: base.py  reach_expert.py
src/renderer/: renderer.py
src/utils/: config.py  hub.py  logger.py
tests/: conftest.py  test_act_policy.py  test_chunking_buffer.py  test_config.py  test_dataset.py  test_env.py  test_expert.py
wandb/: latest-run
wandb/run-20260705_205955-b863hoj0/: run-b863hoj0.wandb
wandb/run-20260705_205955-b863hoj0/files/: config.yaml  requirements.txt  wandb-metadata.json
