[project]
name = "act-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "huggingface-hub>=0.27.0",
    "mink>=1.2.0",
    "mujoco>=3.9.0",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0",
    "robot-descriptions>=2.0.0",
    "ruff>=0.15.18",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/env", "src/expert", "src/renderer", "src/dataset", "src/algorithms", "src/utils"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
